// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewMessageView Item should match snapshot when hasMediaCallPermission is false 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="John Doe"
  accessibilityRole="button"
  activeOpacity={0.105}
  collapsable={false}
  delayLongPress={600}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  rippleColor="#EAF2E6"
  style={
    [
      {
        "backgroundColor": "#FFFDF6",
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="new-message-view-item-john.doe"
  underlayColor="#EAF2E6"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#EAF2E6",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "height": 54,
        },
      ]
    }
  >
    <View
      accessibilityLabel="john.doe's avatar"
      accessible={true}
      style={
        [
          {
            "borderColor": "rgba(44,42,33,0.12)",
            "borderRadius": 9,
            "borderWidth": 1,
            "height": 30,
            "shadowColor": "#2C2A21",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.16,
            "shadowRadius": 4,
            "width": 30,
          },
          {
            "marginHorizontal": 12,
            "marginVertical": 12,
          },
        ]
      }
      testID="avatar"
    >
      <ViewManagerAdapter_ExpoImage
        borderColor={522988065}
        borderRadius={9}
        borderWidth={1}
        containerViewRef={{"current":"Object"}}
        contentFit="cover"
        contentPosition={
          {
            "left": "50%",
            "top": "50%",
          }
        }
        height={30}
        nativeViewRef={{"current":"NativeComponent"}}
        onError={[Function]}
        onLoad={[Function]}
        onLoadStart={[Function]}
        onProgress={[Function]}
        placeholder={[]}
        priority="high"
        shadowColor="#2C2A21"
        shadowOffset={
          {
            "height": 2,
            "width": 0,
          }
        }
        shadowOpacity={0.16}
        shadowRadius={4}
        source={
          [
            {
              "headers": {
                "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
              },
              "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=60",
            },
          ]
        }
        style={
          {
            "borderColor": "rgba(44,42,33,0.12)",
            "borderRadius": 9,
            "borderWidth": 1,
            "height": 30,
            "shadowColor": "#2C2A21",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.16,
            "shadowRadius": 4,
            "width": 30,
          }
        }
        transition={null}
        width={30}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "marginRight": 12,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 18,
              "fontWeight": "500",
              "lineHeight": 26,
              "textAlign": "left",
            },
            {
              "color": "#3B382E",
            },
          ]
        }
      >
        John Doe
      </Text>
    </View>
  </View>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: Default should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "minHeight": 100,
      "padding": 24,
    }
  }
>
  <RNGestureHandlerButton
    accessibilityLabel="John Doe"
    accessibilityRole="button"
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    handlerTag={-1}
    handlerType="NativeViewGestureHandler"
    innerRef={null}
    onActiveStateChange={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onLongPress={[Function]}
    onPress={[Function]}
    rippleColor="#EAF2E6"
    style={
      [
        {
          "backgroundColor": "#FFFDF6",
        },
        {
          "cursor": undefined,
        },
      ]
    }
    testID="new-message-view-item-john.doe"
    underlayColor="#EAF2E6"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#EAF2E6",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "height": 54,
          },
        ]
      }
    >
      <View
        accessibilityLabel="john.doe's avatar"
        accessible={true}
        style={
          [
            {
              "borderColor": "rgba(44,42,33,0.12)",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 30,
              "shadowColor": "#2C2A21",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.16,
              "shadowRadius": 4,
              "width": 30,
            },
            {
              "marginHorizontal": 12,
              "marginVertical": 12,
            },
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderColor={522988065}
          borderRadius={9}
          borderWidth={1}
          containerViewRef={{"current":"Object"}}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={30}
          nativeViewRef={{"current":"NativeComponent"}}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          shadowColor="#2C2A21"
          shadowOffset={
            {
              "height": 2,
              "width": 0,
            }
          }
          shadowOpacity={0.16}
          shadowRadius={4}
          source={
            [
              {
                "headers": {
                  "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                },
                "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=60",
              },
            ]
          }
          style={
            {
              "borderColor": "rgba(44,42,33,0.12)",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 30,
              "shadowColor": "#2C2A21",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.16,
              "shadowRadius": 4,
              "width": 30,
            }
          }
          transition={null}
          width={30}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginRight": 12,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 18,
                "fontWeight": "500",
                "lineHeight": 26,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          John Doe
        </Text>
      </View>
      <RNGestureHandlerButton
        accessibilityLabel="Voice call"
        accessibilityRole="button"
        accessibilityState={
          {
            "disabled": false,
          }
        }
        activeOpacity={0.3}
        borderless={true}
        collapsable={false}
        delayLongPress={600}
        enabled={true}
        handlerTag={-1}
        handlerType="NativeViewGestureHandler"
        innerRef={null}
        onActiveStateChange={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onPress={[Function]}
        rippleColor="#EAF2E6"
        style={
          [
            {
              "alignSelf": "center",
              "opacity": 1,
              "paddingHorizontal": 15,
            },
            {
              "cursor": undefined,
            },
          ]
        }
        testID="new-message-view-item-john.doe-call"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#3B382E",
                "fontSize": 22,
              },
              [
                {
                  "lineHeight": 22,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </RNGestureHandlerButton>
    </View>
  </RNGestureHandlerButton>
</View>
`;

exports[`Story Snapshots: LongName should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "minHeight": 100,
      "padding": 24,
    }
  }
>
  <RNGestureHandlerButton
    accessibilityLabel="Very Long Display Name That Might Get Truncated"
    accessibilityRole="button"
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    handlerTag={-1}
    handlerType="NativeViewGestureHandler"
    innerRef={null}
    onActiveStateChange={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onPress={[Function]}
    rippleColor="#EAF2E6"
    style={
      [
        {
          "backgroundColor": "#FFFDF6",
        },
        {
          "cursor": undefined,
        },
      ]
    }
    testID="new-message-view-item-long.name"
    underlayColor="#EAF2E6"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#EAF2E6",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "height": 54,
          },
        ]
      }
    >
      <View
        accessibilityLabel="long.name's avatar"
        accessible={true}
        style={
          [
            {
              "borderColor": "rgba(44,42,33,0.12)",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 30,
              "shadowColor": "#2C2A21",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.16,
              "shadowRadius": 4,
              "width": 30,
            },
            {
              "marginHorizontal": 12,
              "marginVertical": 12,
            },
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderColor={522988065}
          borderRadius={9}
          borderWidth={1}
          containerViewRef={{"current":"Object"}}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={30}
          nativeViewRef={{"current":"NativeComponent"}}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          shadowColor="#2C2A21"
          shadowOffset={
            {
              "height": 2,
              "width": 0,
            }
          }
          shadowOpacity={0.16}
          shadowRadius={4}
          source={
            [
              {
                "headers": {
                  "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                },
                "uri": "https://open.rocket.chat/avatar/long.name?format=png&size=60",
              },
            ]
          }
          style={
            {
              "borderColor": "rgba(44,42,33,0.12)",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 30,
              "shadowColor": "#2C2A21",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.16,
              "shadowRadius": 4,
              "width": 30,
            }
          }
          transition={null}
          width={30}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginRight": 12,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 18,
                "fontWeight": "500",
                "lineHeight": 26,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Very Long Display Name That Might Get Truncated
        </Text>
      </View>
      <RNGestureHandlerButton
        accessibilityLabel="Voice call"
        accessibilityRole="button"
        accessibilityState={
          {
            "disabled": false,
          }
        }
        activeOpacity={0.3}
        borderless={true}
        collapsable={false}
        delayLongPress={600}
        enabled={true}
        handlerTag={-1}
        handlerType="NativeViewGestureHandler"
        innerRef={null}
        onActiveStateChange={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onPress={[Function]}
        rippleColor="#EAF2E6"
        style={
          [
            {
              "alignSelf": "center",
              "opacity": 1,
              "paddingHorizontal": 15,
            },
            {
              "cursor": undefined,
            },
          ]
        }
        testID="new-message-view-item-long.name-call"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#3B382E",
                "fontSize": 22,
              },
              [
                {
                  "lineHeight": 22,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </RNGestureHandlerButton>
    </View>
  </RNGestureHandlerButton>
</View>
`;

exports[`Story Snapshots: NoVoiceCallPermission should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "minHeight": 100,
      "padding": 24,
    }
  }
>
  <RNGestureHandlerButton
    accessibilityLabel="John Doe"
    accessibilityRole="button"
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    handlerTag={-1}
    handlerType="NativeViewGestureHandler"
    innerRef={null}
    onActiveStateChange={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onPress={[Function]}
    rippleColor="#EAF2E6"
    style={
      [
        {
          "backgroundColor": "#FFFDF6",
        },
        {
          "cursor": undefined,
        },
      ]
    }
    testID="new-message-view-item-john.doe"
    underlayColor="#EAF2E6"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#EAF2E6",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "height": 54,
          },
        ]
      }
    >
      <View
        accessibilityLabel="john.doe's avatar"
        accessible={true}
        style={
          [
            {
              "borderColor": "rgba(44,42,33,0.12)",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 30,
              "shadowColor": "#2C2A21",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.16,
              "shadowRadius": 4,
              "width": 30,
            },
            {
              "marginHorizontal": 12,
              "marginVertical": 12,
            },
          ]
        }
        testID="avatar"
      >
        <ViewManagerAdapter_ExpoImage
          borderColor={522988065}
          borderRadius={9}
          borderWidth={1}
          containerViewRef={{"current":"Object"}}
          contentFit="cover"
          contentPosition={
            {
              "left": "50%",
              "top": "50%",
            }
          }
          height={30}
          nativeViewRef={{"current":"NativeComponent"}}
          onError={[Function]}
          onLoad={[Function]}
          onLoadStart={[Function]}
          onProgress={[Function]}
          placeholder={[]}
          priority="high"
          shadowColor="#2C2A21"
          shadowOffset={
            {
              "height": 2,
              "width": 0,
            }
          }
          shadowOpacity={0.16}
          shadowRadius={4}
          source={
            [
              {
                "headers": {
                  "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                },
                "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=60",
              },
            ]
          }
          style={
            {
              "borderColor": "rgba(44,42,33,0.12)",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 30,
              "shadowColor": "#2C2A21",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.16,
              "shadowRadius": 4,
              "width": 30,
            }
          }
          transition={null}
          width={30}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginRight": 12,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 18,
                "fontWeight": "500",
                "lineHeight": 26,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          John Doe
        </Text>
      </View>
      <RNGestureHandlerButton
        accessibilityLabel="Voice call"
        accessibilityRole="button"
        accessibilityState={
          {
            "disabled": false,
          }
        }
        activeOpacity={0.3}
        borderless={true}
        collapsable={false}
        delayLongPress={600}
        enabled={true}
        handlerTag={-1}
        handlerType="NativeViewGestureHandler"
        innerRef={null}
        onActiveStateChange={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onPress={[Function]}
        rippleColor="#EAF2E6"
        style={
          [
            {
              "alignSelf": "center",
              "opacity": 1,
              "paddingHorizontal": 15,
            },
            {
              "cursor": undefined,
            },
          ]
        }
        testID="new-message-view-item-john.doe-call"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#3B382E",
                "fontSize": 22,
              },
              [
                {
                  "lineHeight": 22,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </RNGestureHandlerButton>
    </View>
  </RNGestureHandlerButton>
</View>
`;
